--- a/example.ipynb
+++ b/example.ipynb
@@ -18,11 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('2024_05_16_iv.csv')\n",
-    "\n",
-    "# select 1 pv module\n",
-    "df = df_raw[df_raw['Module Number'] == 195]\n",
-    "df = df.reset_index(drop=True)"
+    "df = pd.read_csv('2024_05_16_iv.csv')"
    ]
   },
   {
